--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - setup_remote_docker:
           version: 20.10.14
       - run:
-          command: ./backend/strengthgadget/deploy.sh
+          command: cd ./backend/strengthgadget && ./deploy.sh
 #  infra:
 #    docker:
 #      - image: alpine/terragrunt
