--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - run:
           command: |
             cd ./ui && ./deploy.sh &&
-            cd ../infrastructure/terraform/live/staging/cloudfront && ../deploy.sh
+            cd ../infrastructure/terraform/live/staging/cloudfront && ./deploy.sh
 
 
 
