--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,8 +27,7 @@ jobs:
       - setup_remote_docker:
           version: 20.10.14
       - run:
-          command: |
-            cd ./infrastructure/terraform/live/staging/ecs && ../deploy.sh
+          command: cd ./infrastructure/terraform/live/staging/ecs && ../deploy.sh
 #            cd ./infrastructure/terraform/live/staging/cloudfront && ../deploy.sh
 #            cd ./ui && ./deploy.sh &&
 
