--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,9 +27,9 @@ jobs:
       - setup_remote_docker:
           version: 20.10.14
       - run:
-          command: cd ./infrastructure/terraform/live/staging/ecs && ../deploy.sh
-#            cd ./infrastructure/terraform/live/staging/cloudfront && ../deploy.sh
-#            cd ./ui && ./deploy.sh &&
+          command: |
+            cd ./ui && ./deploy.sh && cd ../ &&
+            cd ./infrastructure/terraform/live/staging/cloudfront && ../deploy.sh
 
 
 
