--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,44 +32,19 @@ jobs:
             cd ./infrastructure/terraform/live/staging/cloudfront && ../deploy.sh
 
 
-
 workflows:
   deploy:
     jobs:
-#      - backend-build:
-#          context:
-#            - strengthgadget-staging
-#            - docker-hub-creds
-#      - infra:
-#          context:
-#            - strengthgadget-staging
-#            - docker-hub-creds
+      - backend-build:
+          context:
+            - strengthgadget-staging
+            - docker-hub-creds
+      - infra:
+          context:
+            - strengthgadget-staging
+            - docker-hub-creds
       - frontend-build:
           context: strengthgadget-staging
 
 
 
-
-#version: 2.1
-#
-#jobs:
-#  strength-gadget-build:
-#    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-#    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
-#    docker:
-#      - image: cimg/base:current
-#    # Add steps to the job
-#    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
-#    steps:
-#      - checkout
-#      - run:
-#          name: "Build Pipeline Run Image"
-#          command: >
-#            echo "please work"
-#            echo "$OP_SERVICE_ACCOUNT_TOKEN"
-#
-#workflows:
-#  strength-gadget:
-#    jobs:
-#      - strength-gadget-build:
-#          context: 1password
