--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,12 @@ jobs:
       - setup_remote_docker:
           version: 20.10.14
       - run:
-          command: cd ./backend/strengthgadget && ./deploy.sh
+          command: |
+            cd ./backend/strengthgadget && 
+            echo "$DOCKER_TOKEN" | docker login -u "$DOCKER_USER" --password-stdin &&
+            docker buildx create --use &&
+            docker buildx build --platform linux/arm64 --push -t "$DOCKER_USER/strengthgadget:$CIRCLE_WORKFLOW_ID" .
+          
   infra:
     docker:
       - image: alpine/terragrunt
