--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,9 @@ jobs:
   backend-build:
     docker:
       - image: cimg/base:current
+        auth:
+          username: $TF_VAR_docker_user
+          password: $TF_VAR_docker_token
     steps:
       - checkout
       - setup_remote_docker:
@@ -14,10 +17,13 @@ jobs:
             echo "$DOCKER_TOKEN" | docker login -u "$DOCKER_USER" --password-stdin &&
             docker buildx create --use &&
             docker buildx build --platform linux/arm64 --push -t "$DOCKER_USER/strengthgadget:$CIRCLE_WORKFLOW_ID" .
-          
+
   infra:
     docker:
       - image: alpine/terragrunt
+        auth:
+          username: $TF_VAR_docker_user
+          password: $TF_VAR_docker_token
     steps:
       - checkout
       - setup_remote_docker:
