--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,10 +13,7 @@ jobs:
           version: 20.10.14
       - run:
           command: |
-            cd ./backend/strengthgadget && 
-            echo "$DOCKER_TOKEN" | docker login -u "$DOCKER_USER" --password-stdin &&
-            docker buildx create --use &&
-            docker buildx build --platform linux/arm64 --push -t "$DOCKER_USER/strengthgadget:$CIRCLE_WORKFLOW_ID" .
+            cd ./backend/strengthgadget && ./deploy.sh
 
   infra:
     docker:
