--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,23 @@ jobs:
       - run:
           command: |
             cd ./backend && ./deploy.sh
-
+  backend-deploy:
+    docker:
+      - image: cloudflare/cloudflared
+        auth:
+          username: $TF_VAR_docker_user
+          password: $TF_VAR_docker_token
+    steps:
+      - checkout
+      - setup_remote_docker:
+          version: 20.10.14
+      - run:
+          name: Authenticate using service token and deploy new version
+          command: |
+            export CF_ACCESS_CLIENT_ID="$TF_VAR_cf_access_client_id"
+            export CF_ACCESS_CLIENT_SECRET="$TF_VAR_cf_access_client_secret"
+            cloudflared access ssh --hostname pi4.frii.day --url localhost:22 &
+            ssh piegarden@localhost 'touch i-did-it'
   infra:
     docker:
       - image: alpine/terragrunt
@@ -59,19 +75,22 @@ jobs:
 workflows:
   deploy:
     jobs:
-      - backend-build:
-          context:
-            - context-staging
-            - context-docker-hub
-      - infra:
-          context:
-            - context-staging
-            - context-docker-hub
-      - frontend-build:
-          context:
-            - context-staging
-            - context-docker-hub
-      - statuscake:
+#      - backend-build:
+#          context:
+#            - context-staging
+#            - context-docker-hub
+#      - infra:
+#          context:
+#            - context-staging
+#            - context-docker-hub
+#      - frontend-build:
+#          context:
+#            - context-staging
+#            - context-docker-hub
+#      - statuscake:
+#          context:
+#            - context-staging
+      - backend-deploy:
           context:
             - context-staging
 
