--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,9 +27,8 @@ jobs:
       - run:
           name: Authenticate using service token and deploy new version
           command: |
-            export CF_ACCESS_CLIENT_ID="$TF_VAR_cf_access_client_id"
-            export CF_ACCESS_CLIENT_SECRET="$TF_VAR_cf_access_client_secret"
-            echo "$CF_ACCESS_CLIENT_ID"
+            export TUNNEL_TOKEN_ID="$TF_VAR_cf_access_client_id"
+            export TUNNEL_TOKEN_SECRET="$TF_VAR_cf_access_client_secret"
             cloudflared access ssh --hostname pi4.frii.day --url localhost:22 &
             sleep 10 # waiting for proxy to start
             ssh piegarden@localhost 'touch i-did-it'
