--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,11 +28,11 @@ jobs:
           name: Deploy new version
           command: |
             echo "$TF_VAR_backend_deployment_ssh_private_key" | base64 -d > .key
-            ssh -i ./.key "piegarden@$BACKEND_PUBLIC_IP" 'mkdir -p strengthgadget'
+            ssh -i ./.key "piegarden@$TF_VAR_backend_public_ip" 'mkdir -p strengthgadget'
             scp -i ./.key backend/docker-compose.yaml "piegarden@$TF_VAR_backend_public_ip:strengthgadget"
             printenv > .env
-            scp -i ./.key .env "piegarden@$BACKEND_PUBLIC_IP:strengthgadget"
-            ssh -i ./.key "piegarden@$BACKEND_PUBLIC_IP" 'cd strengthgadget && source ./.env && sudo docker compose restart'
+            scp -i ./.key .env "piegarden@$TF_VAR_backend_public_ip:strengthgadget"
+            ssh -i ./.key "piegarden@$TF_VAR_backend_public_ip" 'cd strengthgadget && source ./.env && sudo docker compose restart'
   infra:
     docker:
       - image: alpine/terragrunt
