Standardizing env var names, so they are the same regardless of where they are used.
Bumped the go version from 1.20 to 1.21.

--- a/backend/kind/redis.yaml
+++ b/backend/kind/redis.yaml
@@ -20,7 +20,7 @@ spec:
           ports:
             - containerPort: 6379
           env:
-            - name: REDIS_PASSWORD
+            - name: TF_VAR_redis_password
               value: "not_a_real_password_do_not_use_in_production"
 ---
 
