--- a/backend/kind/strengthgadget.yaml
+++ b/backend/kind/strengthgadget.yaml
@@ -20,47 +20,47 @@ spec:
           ports:
             - containerPort: 8080
           env:
-            - name: ENVIRONMENT
+            - name: TF_VAR_environment
               value: "local"
-            - name: REGISTRATION_EMAIL_FROM
+            - name: TF_VAR_registration_email_from
               value: "strengthgadget@gmail.com"
-            - name: REGISTRATION_EMAIL_FROM_PASSWORD
+            - name: TF_VAR_registration_email_from_password
               value: "not_a_real_password_do_not_use_in_production"
-            - name: DATABASE_CONNECTION_STRING
+            - name: TF_VAR_database_connection_string
               value: "postgresql://strengthgadget:not_a_real_password_do_not_use_in_production@cockroachdb-public:26257/auth?sslmode=verify-full"
-            - name: VERSION
+            - name: TF_VAR_version
               value: 0.0.1
-            - name: DATABASE_ROOT_CA
+            - name: TF_VAR_database_root_ca
               valueFrom:
                 secretKeyRef:
                   name: cockroachdb-node
                   key: ca.crt
-            - name: SENTRY_END_POINT
+            - name: TF_VAR_sentry_end_point
               valueFrom:
                 secretKeyRef:
                   name: local-secret
                   key: sentryEndPoint
-            - name: EMAIL_ROOT_CA
+            - name: TF_VAR_email_root_ca
               value: "bm90X2FfcmVhbF9wYXNzd29yZF9kb19ub3RfdXNlX2luX3Byb2R1Y3Rpb24="
             - name: LOCAL_DEVELOPMENT
               value: "true"
-            - name: TRUSTED_UI_ORIGIN
+            - name: TF_VAR_trusted_ui_origin
               value: "http://localhost:4200,http://192.168.1.117:4200"
-            - name: REDIS_CONNECTION_STRING
+            - name: TF_VAR_redis_connection_string
               value: "redis:6379"
-            - name: REDIS_PASSWORD
+            - name: TF_VAR_redis_password
               value: "not_a_real_password_do_not_use_in_production"
-            - name: VERIFICATION_EXCESSIVE_RETRY_ATTEMPT_LOCKOUT_DURATION_IN_SECONDS
+            - name: TF_VAR_verification_excessive_retry_attempt_lockout_duration_in_seconds
               value: "5"
-            - name: ALLOWED_VERIFICATION_ATTEMPTS_WITH_THE_EXCESSIVE_RETRY_LOCKOUT_WINDOW
+            - name: TF_VAR_allowed_verification_attempts_with_the_excessive_retry_lockout_window
               value: "5"
-            - name: VERIFICATION_CODE_VALIDITY_WINDOW_IN_MIN
+            - name: TF_VAR_verification_code_validity_window_in_min
               value: "5"
-            - name: WINDOW_LENGTH_IN_SECONDS_FOR_THE_NUMBER_OF_ALLOWED_VERIFICATION_EMAILS_BEFORE_LOCKOUT
+            - name: TF_VAR_window_length_in_seconds_for_the_number_of_allowed_verification_emails_before_lockout
               value: "5"
-            - name: WINDOW_LENGTH_IN_SECONDS_FOR_THE_NUMBER_OF_ALLOWED_LOGIN_ATTEMPTS_BEFORE_LOCKOUT
+            - name: TF_VAR_window_length_in_seconds_for_the_number_of_allowed_login_attempts_before_lockout
               value: "5"
-            - name: ALLOWED_LOGIN_ATTEMPTS_BEFORE_TRIGGERING_LOCKOUT
+            - name: TF_VAR_allowed_login_attempts_before_triggering_lockout
               value: "7"
 ---
 apiVersion: v1
