--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
         auth:
           username: $TF_VAR_docker_user
           password: $TF_VAR_docker_token
+    resource_class: arm.medium  # Specify ARM resource class
     steps:
       - checkout
       - setup_remote_docker:
