fix for config file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,6 +97,10 @@ workflows:
     triggers:
       - schedule:
           cron: "0 18 * * *" # This is the cron syntax for every day at 6pm central time. Want to simulate this change when I am working out, so I can tell if something breaks.
+          filters:
+            branches:
+              only:
+                - master
     jobs:
       - daily-workout-generation:
           context:
