--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,6 @@ tmp
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-dist
-tmp
 /out-tsc
 
 # dependencies
@@ -87,3 +85,5 @@ secrets.yml
 
 localhost.pem
 localhost-key.pem
+
+nx-cloud.env
