--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,11 +30,11 @@ jobs:
           command: |
             echo "$TF_VAR_backend_deployment_ssh_private_key" | base64 -d > .key && chmod 600 .key
             echo "$TF_VAR_backend_deployment_ssh_public_known_host" | base64 -d > ~/.ssh/known_hosts
-            ssh -i ./.key "piegarden@$TF_VAR_backend_public_ip" 'mkdir -p strengthgadget'
-            scp -i ./.key docker-compose.yaml "piegarden@$TF_VAR_backend_public_ip:strengthgadget"
+            ssh -i ./.key "piegarden@$TF_VAR_backend_public_ip" 'mkdir -p $TF_VAR_domain_name'
+            scp -i ./.key docker-compose.yaml "piegarden@$TF_VAR_backend_public_ip:$TF_VAR_domain_name"
             printenv > .env
-            scp -i ./.key .env "piegarden@$TF_VAR_backend_public_ip:strengthgadget"
-            ssh -i ./.key "piegarden@$TF_VAR_backend_public_ip" 'cd strengthgadget && sudo docker compose down || true && sudo docker compose up -d'
+            scp -i ./.key .env "piegarden@$TF_VAR_backend_public_ip:$TF_VAR_domain_name"
+            ssh -i ./.key "piegarden@$TF_VAR_backend_public_ip" 'cd $TF_VAR_domain_name && sudo docker compose down || true && sudo docker compose up -d'
   infra:
     docker:
       - image: alpine/terragrunt
@@ -91,6 +91,34 @@ workflows:
               only: master
           context:
             - context-production
+          requires:
+            - build
+      - build:
+          filters:
+            branches:
+              only: staging
+          context:
+            - context-staging
+            - context-docker-hub
+      - infra:
+          filters:
+            branches:
+              only: staging
+          context:
+            - context-staging
+            - context-docker-hub
+      - statuscake:
+          filters:
+            branches:
+              only: staging
+          context:
+            - context-staging
+      - deploy:
+          filters:
+            branches:
+              only: staging
+          context:
+            - context-staging
           requires:
             - build
 
