--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,6 @@
 version: 2.1
 
 jobs:
-  build:
-    docker:
-      - image: cimg/base:current
-        auth:
-          username: $TF_VAR_docker_user
-          password: $TF_VAR_docker_token
-    resource_class: arm.medium  # Specify ARM resource class
-    steps:
-      - checkout
-      - setup_remote_docker:
-          docker_layer_caching: true
-      - run:
-          command: |
-            ./deploy.sh
   reverse-proxy:
     docker:
       - image: piegarden/file_mover:8.2
@@ -33,7 +19,22 @@ jobs:
             ssh -i ./.key "piegarden@$TF_VAR_backend_public_ip" 'mkdir -p reverse-proxy'
             scp -i ./.key reverse-proxy/docker-compose.yaml reverse-proxy/nginx.conf "piegarden@$TF_VAR_backend_public_ip:reverse-proxy"
             ssh -i ./.key "piegarden@$TF_VAR_backend_public_ip" 'cd reverse-proxy && sudo docker compose down || true && sudo docker compose up -d'
-  deploy:
+
+  build-production:
+    docker:
+      - image: cimg/base:current
+        auth:
+          username: $TF_VAR_docker_user
+          password: $TF_VAR_docker_token
+    resource_class: arm.medium  # Specify ARM resource class
+    steps:
+      - checkout
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run:
+          command: |
+            ./deploy.sh
+  deploy-production:
     docker:
       - image: piegarden/file_mover:8.2
         auth:
@@ -53,7 +54,7 @@ jobs:
             printenv > .env
             scp -i ./.key .env "piegarden@$TF_VAR_backend_public_ip:$TF_VAR_domain_name"
             ssh -i ./.key "piegarden@$TF_VAR_backend_public_ip" 'cd $TF_VAR_domain_name && sudo docker compose down || true && sudo docker compose up -d'
-  infra:
+  infra-production:
     docker:
       - image: alpine/terragrunt
         auth:
@@ -65,7 +66,66 @@ jobs:
           docker_layer_caching: true
       - run:
           command: cd ./infrastructure/terraform/live/staging/raspberry_pi && ../deploy.sh
-  statuscake:
+  statuscake-production:
+    docker:
+      - image: alpine/terragrunt
+        auth:
+          username: $TF_VAR_docker_user
+          password: $TF_VAR_docker_token
+    steps:
+      - checkout
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run:
+          command: cd ./infrastructure/terraform/live/staging/statuscake && ../deploy.sh
+
+  build-staging:
+    docker:
+      - image: cimg/base:current
+        auth:
+          username: $TF_VAR_docker_user
+          password: $TF_VAR_docker_token
+    resource_class: arm.medium  # Specify ARM resource class
+    steps:
+      - checkout
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run:
+          command: |
+            ./deploy.sh
+  deploy-staging:
+    docker:
+      - image: piegarden/file_mover:8.2
+        auth:
+          username: $TF_VAR_docker_user
+          password: $TF_VAR_docker_token
+    steps:
+      - checkout
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run:
+          name: Deploy new version
+          command: |
+            echo "$TF_VAR_backend_deployment_ssh_private_key" | base64 -d > .key && chmod 600 .key
+            echo "$TF_VAR_backend_deployment_ssh_public_known_host" | base64 -d > ~/.ssh/known_hosts
+            ssh -i ./.key "piegarden@$TF_VAR_backend_public_ip" 'mkdir -p $TF_VAR_domain_name'
+            scp -i ./.key docker-compose.yaml "piegarden@$TF_VAR_backend_public_ip:$TF_VAR_domain_name"
+            printenv > .env
+            scp -i ./.key .env "piegarden@$TF_VAR_backend_public_ip:$TF_VAR_domain_name"
+            ssh -i ./.key "piegarden@$TF_VAR_backend_public_ip" 'cd $TF_VAR_domain_name && sudo docker compose down || true && sudo docker compose up -d'
+  infra-staging:
+    docker:
+      - image: alpine/terragrunt
+        auth:
+          username: $TF_VAR_docker_user
+          password: $TF_VAR_docker_token
+    steps:
+      - checkout
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run:
+          command: cd ./infrastructure/terraform/live/staging/raspberry_pi && ../deploy.sh
+  statuscake-staging:
     docker:
       - image: alpine/terragrunt
         auth:
@@ -118,6 +178,7 @@ workflows:
             - context-production
           requires:
             - build-production
+
       - build-staging:
           filters:
             branches:
