--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -146,7 +146,7 @@ workflows:
           context:
             - context-staging
       - deploy:
-          name: "deploy staging
+          name: "deploy staging"
           filters:
             branches:
               only: staging
