--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -121,7 +121,7 @@ workflows:
           context:
             - context-production
           requires:
-            - build
+            - "build production"
       - build:
           name: "build staging"
           filters:
@@ -153,7 +153,7 @@ workflows:
           context:
             - context-staging
           requires:
-            - build
+            - "build staging"
 
 
 
