--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
           command: |
             echo "$TF_VAR_backend_deployment_ssh_private_key" | base64 -d > .key && chmod 600 .key
             echo "$TF_VAR_backend_deployment_ssh_public_known_host" | base64 -d > ~/.ssh/known_hosts
-            ssh -i ./.key "piegarden@$TF_VAR_backend_public_ip" 'mkdir -p $TF_VAR_domain_name'
+            ssh -i ./.key "piegarden@$TF_VAR_backend_public_ip" "mkdir -p ${TF_VAR_domain_name}"
             scp -i ./.key docker-compose.yaml "piegarden@$TF_VAR_backend_public_ip:$TF_VAR_domain_name"
             printenv > .env
             scp -i ./.key .env "piegarden@$TF_VAR_backend_public_ip:$TF_VAR_domain_name"
