--- a/keydb.conf
+++ b/keydb.conf
@@ -66,7 +66,9 @@
 # IF YOU ARE SURE YOU WANT YOUR INSTANCE TO LISTEN TO ALL THE INTERFACES
 # JUST COMMENT THE FOLLOWING LINE.
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-bind 127.0.0.1
+# Have to listen on all interfaces when running in docker so that other containers can reach it.
+# Is still safe because the fire wall isn't allowing access.
+# bind 127.0.0.1
 
 # Protected mode is a layer of security protection, in order to avoid that
 # KeyDB instances left open on the internet are accessed and exploited.
